[package]
name = "put-keygen"
description = "PUT key generation utility"
documentation = "https://docs.rs/put-keygen"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bs58 = { workspace = true }
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = { workspace = true }
num_cpus = { workspace = true }
put-clap-v3-utils = { workspace = true }
put-cli-config = { workspace = true }
put-remote-wallet = { workspace = true, features = ["default"] }
put-sdk = { workspace = true }
put-version = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "put-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
